--- a/src/code_gen/bot_templates/project_structure/.env.example.j2
+++ b/src/code_gen/bot_templates/project_structure/.env.example.j2
@@ -1,9 +1,9 @@
-BOT_TOKEN =
-ADMIN_ID =
+BOT_TOKEN=
+ADMIN_ID=
 
 # Необходимо заполнить, если есть отправка писем на email
-EMAIL_HOST =
-EMAIL_PORT =
-EMAIL_HOST_USER =
-EMAIL_HOST_PASSWORD =
-EMAIL_GOOGLE_APP_PASSWORD =
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_GOOGLE_APP_PASSWORD=
