--- a/src/code_gen/bot_templates/project_structure/requirements.txt.j2
+++ b/src/code_gen/bot_templates/project_structure/requirements.txt.j2
@@ -1,7 +1,8 @@
 aiofiles==23.2.1
-aiogram==3.4.1
-aiohttp==3.9.3
-aiosignal==1.3.1
+aiogram==3.21.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
 aiosmtplib==3.0.1
 aiosqlite==0.20.0
 annotated-types==0.6.0
@@ -13,8 +14,9 @@ frozenlist==1.4.1
 idna==3.6
 magic-filter==1.0.12
 multidict==6.0.5
+propcache==0.3.2
 pydantic==2.5.3
 pydantic_core==2.14.6
 python-dotenv==1.0.1
 typing_extensions==4.10.0
-yarl==1.9.4
+yarl==1.20.1
