--- a/src/apps/code_gen/bot_templates/project_structure/middlewares.py.j2
+++ b/src/apps/code_gen/bot_templates/project_structure/middlewares.py.j2
@@ -1,4 +1,4 @@
-from typing import Any, Callable, Dict, Awaitable
+from typing import Any, Callable, Awaitable
 
 from aiogram import BaseMiddleware
 from aiogram.types import TelegramObject
@@ -10,10 +10,10 @@ from loader import db_connector
 
 class UserMiddleware(BaseMiddleware):
     async def __call__(
-            self,
-            handler: Callable[[TelegramObject, Dict[str, Any]], Awaitable[Any]],
-            event: TelegramObject,
-            data: Dict[str, Any],
+        self,
+        handler: Callable[[TelegramObject, dict[str, Any]], Awaitable[Any]],
+        event: TelegramObject,
+        data: dict[str, Any],
     ):
         user = data['event_from_user']
         await add_user(
